syntax = "proto3";

package com.makarytskyi.internalapi.input.reqreply.order;

import "com/makarytskyi/internalapi/commonmodels/error/error.proto";
import "com/makarytskyi/internalapi/commonmodels/order/aggregated_order.proto";
import "com/makarytskyi/internalapi/commonmodels/order/order.proto";

option java_multiple_files = true;

message FindAllOrdersRequest {
  int32 page = 1;
  int32 size = 2;
}

message FindAllOrdersResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.order.AggregatedOrder orders = 1;
  }

  message Failure {
    string message = 100;
  }
}
